--- a/templates/blog/post.erb
+++ b/templates/blog/post.erb
@@ -2,8 +2,9 @@
 title:      <%= title %>
 created_at: <%= Time.now.to_y %>
 blog_post:  true
+layout:     post
 filter:
-  - textile
+  - markdown
 --- 
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nunc congue ipsum vestibulum libero. Aenean vitae justo. Nam eget tellus. Etiam convallis, est eu lobortis mattis, lectus tellus tempus felis, a ultricies erat ipsum at metus.
 
