--- a/content/blog/stylesheets/public.css
+++ b/content/blog/stylesheets/public.css
@@ -46,6 +46,11 @@ body {
   text-decoration: underline;
 }
 
+.article {
+    padding-left: 1em;
+    padding-right: 1em;
+}
+
 .toparticle,
 .recentarticle,
 .oldarticle {
